--- a/doc/project1-Yuqi Xing.Rmd
+++ b/doc/project1-Yuqi Xing.Rmd
@@ -7,7 +7,7 @@ output:
     df_print: paged
 ---
 #introduction
-The 2012 U.S. presidential election was held on Tuesday, November 6, 2012. This is the 57th U.S. presidential election. Meanwhile, all 435 seats in the house of Representatives and 33 seats in the Senate will be re elected to produce the 113th U.S. Congress. The electoral college will be elected first, and then the president and vice president will be elected by the electoral college on December 17, 2012. The incumbent President Barack Obama and Vice President Joe Biden, as qualified candidates, announced their bid for re-election and successfully won the Democratic nomination. The other major party, the Republican Party, nominated former Massachusetts Governor Mitt Romney as the presidential candidate, and congressman Paul Ryan as his deputy. In addition, some candidates representing other political parties and independents participated in the presidential election. Finally, Barack Obama, representing the Democratic Party, won more than half of the electoral votes in the presidential election, defeated Mitt Romney, the Republican Party, by 332 votes to 206 votes, and was re elected as the president of the United States.
+The 2012 U.S. presidential election was held on Tuesday, November 6, 2012. This is the 57th U.S. presidential election. Meanwhile, all 435 seats in the house of Representatives and 33 seats in the Senate will be re elected to produce the 113th U.S. Congress. The electoral college will be elected first, and then the president and vice president will be elected by the electoral college on December 17, 2012. The incumbent President Barack Obama and Vice President Joe Biden, as qualified candidates, announced their bid for re-election and successfully won the Democratic nomination. The other major party, the Republican Party, nominated former Massachusetts Governor Mitt Romney as the presidential candidate, and congressman Paul Ryan as his deputy. In addition, some candidates representing other political parties and independents participated in the presidential election. Finally, Barack Obama, representing the Democratic Party, won more than half of the electoral votes in the presidential election, defeated Mitt Romney, the Republican Party, by 332 votes to 206 votes, and was re elected as the president of the United States. Mr Obama is America's first black president, I want to research if there exist bias in the election for president as well as the parties the candidates support, especially racial bias. 
 
 #data process
 #install the packages
@@ -216,4 +216,4 @@ There is no obvious gender bias in voting for Senate.
 
 
 #conclusion:
-There is no obvious gender bias in voting for president, Senvote and U.S House parts of election. Whites have a higher voice because of the large number of whites in the election. The Democrats and the Republicans are basically in a close race for voting for U.S House and Senvote, but the Democrats are a little more likely to vote. The similiar situation happens on Obama and romney.It's worth noting that almost all blacks voted for Obama and the Democrats, making a influence in this election (blacks have the second largest population, followed by whites). There exists a gender bias in 2012 election.
+There is no obvious gender bias in voting for president, Senvote and U.S House parts of election. Whites have a higher voice because of the large number of whites in the election. The Democrats and the Republicans are basically in a close race for voting for U.S House and Senvote, but the Democrats are a little more likely to vote. The similiar situation happens on Obama and romney.It's worth noting that almost all blacks voted for Obama and the Democrats, making a influence in this election (blacks have the second largest population, followed by whites). There exists a racial bias for president, U.S House and Senvote in 2012 election.
